GNOME Bugzilla – Bug 658848
g_type_info_is_pointer() fails on manually redefined argument types
Last modified: 2015-02-07 17:01:19 UTC
Consider following annotation of g_variant_equal: /** * g_variant_equal: * @one: (type GVariant): a #GVariant instance * @two: (type GVariant): a #GVariant instance * @returns: %TRUE if @one and @two are equal produces following .gir snippet parameters: <parameters> <parameter name="two" transfer-ownership="none"> <doc xml:whitespace="preserve">a #GVariant instance</doc> <type name="Variant" c:type="gconstpointer"/> </parameter> </parameters> girparser.c then fails to deduce that input argument is actually pointer, because there is no '*' mark in the c:type.
Created attachment 196294 [details] [review] Make sure that gpointer and gconstpointer ctypes are recognizes as pointer types
Review of attachment 196294 [details] [review]: Unfortunate, but looks good to me.
Review of attachment 196294 [details] [review]: Committed, thanks for quick review! :-)
[Mass-moving gobject-introspection tickets to its own Bugzilla product - see bug 708029. Mass-filter your bugmail for this message: introspection20150207 ]